--- a/web/WEB-INF/pages/file/insert.vm
+++ b/web/WEB-INF/pages/file/insert.vm
@@ -4,13 +4,13 @@
 <div id="conbg">
 <div class=contitle>
 <div class=leftmain>定义表结构</div>
-<div class=rightmain>&nbsp;&nbsp;<a href="/file/actions.html?method=list&infoSortIds=$vMUtils.encrypt($infoSortId)&cm=$cm">&#171;返回</a></div>
+<div class=rightmain>&nbsp;&nbsp;<a href="/file/actions.html?method=list&infoSortIds=$vMUtils.encrypt($infoSortId)&statuses=$vMUtils.encrypt($status)&cm=$cm">&#171;返回</a></div>
 <div class=rightmain></div>
 </div>
 $validator.getDynamicJavascript()
 $validator.getStaticJavascript()
 <table width="100%"><tr><td><div id=message></div></td></tr></table>
-#set($actionUrl="/file/actions.html?method=insert&insert=y&infoSortIds=$vMUtils.encrypt($infoSortId)&cm=$cm")
+#set($actionUrl="/file/actions.html?method=insert&insert=y&infoSortIds=$vMUtils.encrypt($infoSortId)&statuses=$vMUtils.encrypt($status)&cm=$cm")
 <div class=conmain>
 	#parse( "/WEB-INF/pages/file/form.vm" )
 </div>
