--- a/web/WEB-INF/pages/infosort/form.vm
+++ b/web/WEB-INF/pages/infosort/form.vm
@@ -30,13 +30,13 @@
 				<a href="/infosort/actions.html?method=insert&parentId=$vMUtils.encrypt($biz.id)"  >添加子分类</a>
 				#else
 					#if($biz.oneFloor!="")
-						<a href="/structure/actions.html?method=insert&infoSortIds=$vMUtils.encrypt($biz.id)"  >一层结构维护</a>
+						<a href="/structure/actions.html?method=insert&infoSortIds=$vMUtils.encrypt($biz.id)&statuses=$vMUtils.encrypt($status)"  >一层结构维护</a>
 					#end
 					#if($biz.twoFloor!="")
-						<a href="/structure/actions.html?method=insert&infoSortIds=$vMUtils.encrypt($biz.id)"  >二层结构维护</a>
+						<a href="/structure/actions.html?method=insert&infoSortIds=$vMUtils.encrypt($biz.id)&statuses=$vMUtils.encrypt($status)"  >二层结构维护</a>
 					#end
 					#if($biz.threeFloor!="")
-						<a href="/structure/actions.html?method=insert&infoSortIds=$vMUtils.encrypt($biz.id)"  >三层结构维护</a>
+						<a href="/structure/actions.html?method=insert&infoSortIds=$vMUtils.encrypt($biz.id)&statuses=$vMUtils.encrypt($status)"  >三层结构维护</a>
 					#end
 				#end
 				<a href="/infosort/actions.html?method=update&sid=$vMUtils.encrypt($biz.id)"  >编辑</a>
@@ -86,16 +86,17 @@
 							</tr>
 						</table>
 						
+						#if($!bizObj.type==2)
 						<br><br>下属编目表
 						<table width="100%" border="0" cellpadding="2" cellspacing="3">
 							<tr>
 								<td bgcolor="#eeeee5" width="20%">选择层次:
 								</td>
 								<td>
-									<select name="type">
-										<option value="0"  #if($!bizObj.type==0) selected #end>一层</option>
-										<option value="1" #if($!bizObj.type==1) selected #end>二层</option>
-										<option value="2" #if($!bizObj.type==2) selected #end>三层</option>
+									<select name="status">
+										<option value="0"  #if($!bizObj.status==0) selected #end>一层</option>
+										<option value="1" #if($!bizObj.status==1) selected #end>二层</option>
+										<option value="2" #if($!bizObj.status==2) selected #end>三层</option>
 									</select>
 								</td>
 							</tr>
@@ -127,6 +128,7 @@
 							</tr>
 							##end	
 						</table>
+						#end
 						<table width="100%" border="0" cellspacing="4" cellpadding="0">
 							<tr>
 								<td  align="center" >
