--- a/trunk/web/WEB-INF/pages/file/form.vm
+++ b/trunk/web/WEB-INF/pages/file/form.vm
@@ -114,8 +114,8 @@
 							#elseif($strIndex=='a50')
 							#set($values=$!bizObj.a50)
 							#end
-						
 						#end
+						#if($status==1 && $biz.ifTwo==0)
 						<tr> 
 							<td bgcolor="#eeeee5" width="20%">$biz.znName:
 							</td>
@@ -144,6 +144,67 @@
 								#end
 							</td>
 						</tr>
+						#elseif($status==2 && ($biz.ifTwo==0 || $biz.ifThree==0))
+							<tr> 
+							<td bgcolor="#eeeee5" width="20%">$biz.znName:
+							</td>
+							<td>
+								#if($biz.length>200)
+									#showFormTextarea("$biz.serialNumber" "$values" 3)
+								#else
+									#if($biz.type>=3)
+										<input name="$!biz.serialNumber" type="text" size="10" maxlength="10" value="$values" />
+								        <a onclick="gfPop.fPopCalendar(document.fileForm.$!biz.serialNumber);return false;">
+								       		<img name="popcal" align="absmiddle" src="/images/calbtn.gif" width="34" height="22" border="0" alt="日历标签"/>
+								        </a>
+									#else
+										#if($biz.inputFashion==1)
+											#if($biz.dictionaryName==0)
+												#set($indexNum=-1)
+											#else
+												#set($indexNum=$biz.dictionaryName)
+											#end
+											#showListSelect($vMUtils.getDictionarySortByParentId($indexNum) "$biz.serialNumber" $values)
+										#else
+											#showFormText("$biz.serialNumber" "$values" 20)
+										#end
+										
+									#end					
+								#end
+							</td>
+						</tr>
+						#else
+						<tr> 
+							<td bgcolor="#eeeee5" width="20%">$biz.znName:
+							</td>
+							<td>
+								#if($biz.length>200)
+									#showFormTextarea("$biz.serialNumber" "$values" 3)
+								#else
+									#if($biz.type>=3)
+										<input name="$!biz.serialNumber" type="text" size="10" maxlength="10" value="$values" />
+								        <a onclick="gfPop.fPopCalendar(document.fileForm.$!biz.serialNumber);return false;">
+								       		<img name="popcal" align="absmiddle" src="/images/calbtn.gif" width="34" height="22" border="0" alt="日历标签"/>
+								        </a>
+									#else
+										#if($biz.inputFashion==1)
+											#if($biz.dictionaryName==0)
+												#set($indexNum=-1)
+											#else
+												#set($indexNum=$biz.dictionaryName)
+											#end
+											#showListSelect($vMUtils.getDictionarySortByParentId($indexNum) "$biz.serialNumber" $values)
+										#else
+											#showFormText("$biz.serialNumber" "$values" 20)
+										#end
+										
+									#end					
+								#end
+							</td>
+						</tr>
+						#end
+						
+						
 						#set($index = $index+1)
 						#end					
 					</table>
